2009-08-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/accessrules.c: New. New implementation for access rules.
	Not finished yet.

	* base/accessrules.h: New. Respective Protos.

	* misc/Makefile: Added handling for module "accessrules".

2009-08-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/nvti.c: Fixed a few indentions and incomplete doc strings.

2009-08-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* base/README.txt: Removed second blank newline at eof.

	* hg/README.txt, misc/README.txt: New, describe 'state' of the
	directories.

2009-08-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* TODO, base/certificate.c, base/certificate.h, base/nvti.c,
	base/nvti.c, misc/openvas_logging.h: Updated paths in comments.

	* hg/Makefile: Updated include path for the test target.

2009-08-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	As part of CR #38 (http://www.openvas.org/openvas-cr-38.html), renamed
	library libopenvas to libopenvasmisc.

	* misc/Makefile, libopenvas-config.in: Changed library name and
	output of libopenvas-config.
	
	* misc/openvas-logging.c: Changed path in comment.
	
	* doc/Doxyfile, doc/Doxyfile_full: Adjusted input path.
	
	* hg/Makefile: Changed include path.

2009-08-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* MANIFEST: Sorted.

2009-08-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	As part of CR #38 (http://www.openvas.org/openvas-cr-38.html), renamed
	openvas-libraries/libopenvas folder to openvas-libraries/misc.

	* libopenvas/, misc/: Moved.

	* Makefile: Adjusted path.

	* MANIFEST: Adjusted paths.

2009-08-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* libopenvas/hlst.c (_hashqueue): Cosmetics, doc.

2009-08-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	As part of CR #38 (http://www.openvas.org/openvas-cr-38.html), renamed
	libopenvas_hg to libopenvashg.
